@@ -17,6 +17,8 @@
 //
 package net.sourceforge.jtds.test;
 
+import java.sql.Connection;
+import java.sql.DriverManager;
 import java.sql.SQLException;
 import java.sql.PreparedStatement;
 import java.sql.Savepoint;
@@ -25,7 +27,7 @@ import java.sql.Savepoint;
  * JDBC 3.0-only tests for Connection.
  *
  * @author Alin Sinpalean
- * @version $Id: ConnectionJDBC3Test.java,v 1.1 2005-06-03 12:08:55 alin_sinpalean Exp $
+ * @version $Id: ConnectionJDBC3Test.java,v 1.1.2.1 2009-08-08 14:37:55 ickzon Exp $
  */
 public class ConnectionJDBC3Test extends DatabaseTestCase {
 
@@ -58,4 +60,22 @@ public class ConnectionJDBC3Test extends DatabaseTestCase {
         stmt.close();
         con.close();
     }
+    
+    public void testUnclosedSocket() throws SQLException {
+        final int count = 100000;
+
+        Connection conn = null;
+        String url = "jdbc:jtds:sqlserver://localhost;loginTimeout=0";
+
+        for (int i = 0; i < count; i ++) {
+            try {
+                conn = DriverManager.getConnection(url, "sa", "invalid_password");
+                assertTrue(false);
+            } catch (SQLException e) {
+                assertEquals(e.getErrorCode(),18456);
+            }
+        }
+        
+    }
+
 }
